# StudentBehavior

./: .gitignore  ARCHITECTURE_MANUAL.md  CODE_REVIEW_REPORT.md  output_schema.txt  pyproject.toml  student_behavior_analysis_plan.md  修复进展说明.md  前端架构与交互资产说明书.md  新前端开发蓝图与组件设计文档.md  新后端核心API接口说明书.md  项目数据表与字段清单.md
projects/analytics-db/: pyproject.toml
projects/analytics-db/sql/: 001_create_dimensions.sql  002_create_fact_tables.sql  003_create_student_term_features.sql  004_indexes.sql  005_create_demo_runtime_tables.sql
projects/analytics-db/src/student_behavior_analytics_db/: __init__.py  build_demo_features_from_excels.py  build_student_term_features.py  cli.py  config.py  db.py  load_courses.py  load_fact_assignments.py  load_fact_exams.py  (+16 more)
projects/analytics-db/tests/: test_build_demo_features_from_excels.py  test_build_student_term_features.py  test_cli.py  test_load_fact_assignments.py  test_load_fact_attendance.py  test_load_fact_destinations.py  test_load_fact_discussions.py  test_load_fact_evaluation_labels.py  test_load_fact_exams.py  test_load_fact_grades.py  test_load_fact_library.py  test_load_fact_running.py  test_load_fact_signins.py  test_load_fact_tasks.py  test_load_students.py  test_load_terms.py  test_normalize_ids.py  test_normalize_terms.py  test_sqlite_runtime.py
projects/model-stubs/: .env.example  pyproject.toml
projects/model-stubs/tests/: test_build_outputs.py  test_cli.py  test_config.py  test_evaluate_risk_model.py  test_io.py  test_llm_reporting.py  test_model_registry.py  test_scoring.py  test_templates.py  test_train_risk_model.py
(+163 files in other folders)
